--- a/app/design/adminhtml/default/default/template/resetforgottenpassword.phtml
+++ b/app/design/adminhtml/default/default/template/resetforgottenpassword.phtml
@@ -18,8 +18,7 @@
     <meta name="robots" content="noindex, nofollow" />
     <title><?= Mage::helper('adminhtml')->__('Reset a Password') ?></title>
     <link type="text/css" rel="stylesheet" href="<?= $this->getSkinUrl('login.css') ?>" media="all" />
-    <link rel="icon" type="image/svg+xml" href="<?= $this->getSkinUrl('images/favicon.svg') ?>" sizes="any">
-    <link rel="icon" type="image/png" href="<?= $this->getSkinUrl('images/favicon.png') ?>">
+    <?= Mage::helper('page')->getFaviconHtml() ?>
     <script type="text/javascript" src="<?= $this->getJsUrl('validation.js') ?>"></script>
     <script type="text/javascript" src="<?= $this->getJsUrl('mage/adminhtml/form.js') ?>"></script>
 </head>
