--- a/app/design/frontend/base/default/template/page/html/head.phtml
+++ b/app/design/frontend/base/default/template/page/html/head.phtml
@@ -17,8 +17,7 @@
 <meta name="keywords" content="<?= htmlspecialchars($this->getKeywords()) ?>" />
 <meta name="robots" content="<?= htmlspecialchars($this->getRobots()) ?>" />
 <?= $this->getHreflang() ?>
-<link rel="icon" type="image/svg+xml" href="<?= $this->getSkinUrl('images/favicon.svg') ?>" sizes="any">
-<link rel="icon" type="image/png" href="<?= $this->getSkinUrl('images/favicon.png') ?>">
+<?= $this->helper('page')->getFaviconHtml() ?>
 <?= $this->getCssJsHtml() ?>
 <?= $this->getChildHtml() ?>
 <?= $this->helper('core/js')->getTranslatorScript() ?>
