--- a/app/design/frontend/base/default/template/checkout/cart/coupon.phtml
+++ b/app/design/frontend/base/default/template/checkout/cart/coupon.phtml
@@ -15,17 +15,20 @@
     <div class="discount">
         <h2><?= $this->__('Discount Codes') ?></h2>
         <div class="discount-form">
-            <label for="coupon_code"><?= $this->__('Discount Codes') ?></label>
             <input type="hidden" name="remove" id="remove-coupone" value="0" />
-            <div class="field-wrapper">
-                <input class="input-text" type="text" id="coupon_code" name="coupon_code" value="<?= $this->escapeHtml($this->getCouponCode()) ?>" />
-                <div class="button-wrapper">
-                    <button type="button" title="<?= $this->quoteEscape($this->__('Apply')) ?>" class="button2" onclick="discountForm.submit(false)" value="<?= $this->__('Apply') ?>"><?= $this->__('Apply') ?></button>
-                    <?php if(strlen($this->getCouponCode())): ?>
-                        <button type="button" title="<?= $this->quoteEscape($this->__('Cancel')) ?>" class="button2 cancel-coupon" onclick="discountForm.submit(true)" value="<?= $this->__('Cancel') ?>"><?= $this->__('Cancel') ?>
-                        </button>
-                    <?php endif ?>
-                </div>
+            <div class="coupon-input-group">
+                <label for="coupon_code" class="visually-hidden"><?= $this->__('Enter discount code') ?></label>
+                <input
+                    class="input-text coupon-input"
+                    type="text"
+                    id="coupon_code"
+                    name="coupon_code"
+                    value="<?= $this->escapeHtml($this->getCouponCode()) ?>"
+                    placeholder="<?= $this->__('Enter discount code') ?>" />
+                <button type="button" title="<?= $this->quoteEscape($this->__('Apply')) ?>" class="button2 btn-apply" onclick="discountForm.submit(false)"><?= $this->__('Apply') ?></button>
+                <?php if(strlen($this->getCouponCode())): ?>
+                    <button type="button" title="<?= $this->quoteEscape($this->__('Cancel')) ?>" class="button2 btn-cancel cancel-coupon" onclick="discountForm.submit(true)"><?= $this->__('Cancel') ?></button>
+                <?php endif ?>
             </div>
         </div>
     </div>
