--- a/app/design/frontend/base/default/template/checkout/cart/shipping.phtml
+++ b/app/design/frontend/base/default/template/checkout/cart/shipping.phtml
@@ -14,51 +14,34 @@
     <h2><?= $this->__('Estimate Shipping and Tax') ?></h2>
     <div class="shipping-form">
        <form action="<?= $this->getFormActionUrl() ?>" method="post" id="shipping-zip-form">
-            <p class="shipping-desc"><?= $this->__('Enter your destination to get a shipping estimate.') ?></p>
-            <ul class="form-list">
-                <li class="shipping-country">
-                    <label for="country" class="required"><?= $this->__('Country') ?></label>
-                    <div class="input-box">
-                        <?= Mage::getBlockSingleton('directory/data')->getCountryHtmlSelect($this->getEstimateCountryId()) ?>
-                    </div>
-                </li>
-            <?php //if ($this->getStateActive()): ?>
-                <li class="shipping-region">
-                    <?php /* Removing the conditional check for whether the region is required, because it doesn't work
-                    <label for="region_id"<?php if ($this->isStateProvinceRequired()) echo ' class="required"' ?>><?php if ($this->isStateProvinceRequired()) echo '<em>*</em>' ?><?= $this->__('State/Province') ?></label>
-                    */ ?>
-                    <label for="region_id" class="required"><?= $this->__('State/Province') ?></label>
-                    <div class="input-box">
-                        <select id="region_id" name="region_id" title="<?= $this->quoteEscape($this->__('State/Province')) ?>" style="display:none;"<?= ($this->isStateProvinceRequired() ? ' class="validate-select"' : '') ?>>
-                            <option value=""><?= $this->__('Please select region, state or province') ?></option>
-                        </select>
-                       <script type="text/javascript">
-                           document.getElementById('region_id').setAttribute('defaultValue', "<?= $this->getEstimateRegionId() ?>");
-                       </script>
-                       <input type="text" id="region" name="region" value="<?= $this->escapeHtml($this->getEstimateRegion()) ?>"  title="<?= $this->quoteEscape($this->__('State/Province')) ?>" class="input-text" style="display:none;" />
-                   </div>
-                </li>
-            <?php //endif ?>
+            <div class="shipping-fields-grid">
+                <div class="form-field">
+                    <label for="country" class="required"><em>*</em> <?= $this->__('Country') ?></label>
+                    <?= Mage::getBlockSingleton('directory/data')->getCountryHtmlSelect($this->getEstimateCountryId()) ?>
+                </div>
+                <div class="form-field">
+                    <label for="region_id" class="required"><em>*</em> <?= $this->__('State/Province') ?></label>
+                    <select id="region_id" name="region_id" title="<?= $this->quoteEscape($this->__('State/Province')) ?>" style="display:none;"<?= ($this->isStateProvinceRequired() ? ' class="validate-select"' : '') ?>>
+                        <option value=""><?= $this->__('Please select region, state or province') ?></option>
+                    </select>
+                    <script type="text/javascript">
+                        document.getElementById('region_id').setAttribute('defaultValue', "<?= $this->getEstimateRegionId() ?>");
+                    </script>
+                    <input type="text" id="region" name="region" value="<?= $this->escapeHtml($this->getEstimateRegion()) ?>" title="<?= $this->quoteEscape($this->__('State/Province')) ?>" class="input-text" style="display:none;" />
+                </div>
+            </div>
             <?php if ($this->getCityActive()): ?>
-                <li class="shipping-region">
-                    <label for="city"<?= $this->isCityRequired() ? ' class="required"' : '' ?>><?= $this->__('City') ?></label>
-                    <div class="input-box">
-                        <input class="input-text<?php if ($this->isCityRequired()):?> required-entry<?php endif ?>" id="city" type="text" name="estimate_city" value="<?= $this->escapeHtml($this->getEstimateCity()) ?>" />
-                    </div>
-                </li>
+            <div class="shipping-city-field">
+                <label for="city"<?= $this->isCityRequired() ? ' class="required"' : '' ?>><?php if ($this->isCityRequired()): ?><em>*</em> <?php endif ?><?= $this->__('City') ?></label>
+                <input class="input-text<?php if ($this->isCityRequired()):?> required-entry<?php endif ?>" id="city" type="text" name="estimate_city" value="<?= $this->escapeHtml($this->getEstimateCity()) ?>" />
+            </div>
             <?php endif ?>
-                <li class="shipping-postcode">
-                    <?php /* Removing the conditional check for whether the postal code is required, because it doesn't work
-                    <label for="postcode"<?php if ($this->isZipCodeRequired()) echo ' class="required"' ?>><?php if ($this->isZipCodeRequired()) echo '<em>*</em>' ?><?= $this->__('Zip/Postal Code') ?></label>
-                    */ ?>
-                    <label for="postcode" class="required"><?= $this->__('Zip') ?></label>
-                    <div class="input-box">
-                        <input class="input-text validate-postcode<?php if ($this->isZipCodeRequired()):?> required-entry<?php endif ?>" type="text" id="postcode" name="estimate_postcode" value="<?= $this->escapeHtml($this->getEstimatePostcode()) ?>" />
-                    </div>
-                </li>
-            </ul>
-            <div class="buttons-set">
-                <button type="submit" title="<?= $this->quoteEscape($this->__('Estimate')) ?>" class="button2">
+            <div class="shipping-zip-row">
+                <div class="zip-field">
+                    <label for="postcode" class="required"><em>*</em> <?= $this->__('Zip') ?></label>
+                    <input class="input-text validate-postcode<?php if ($this->isZipCodeRequired()):?> required-entry<?php endif ?>" type="text" id="postcode" name="estimate_postcode" value="<?= $this->escapeHtml($this->getEstimatePostcode()) ?>" />
+                </div>
+                <button type="submit" title="<?= $this->quoteEscape($this->__('Estimate')) ?>" class="button2 btn-estimate">
                     <?= $this->__('Estimate') ?>
                 </button>
             </div>
